# LyreWallet

./: Cargo.toml  README.md
src/: global.rs  main.rs
src/keypair/: keypair_gen.rs  keypair_ops.rs  mod.rs
