[package]
name = "lyrewallet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
bs58 = "0.4.0"
ed25519-dalek = "1.0.1"
rand = "0.7"
secrecy = "0.8.0"
zeroize = "1.4.0"
#ed25519-dalek-bip32 = "0.1.1"
#solana-client = "1.7.6"
#solana-sdk = "1.7.6"
