[package]
name = "lyrewallet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
async-dup = "1.2.2"
async-fs = "1.5.0"
async-io = "1.6.0"
borsh = "0.9.1"
bs58 = "0.4.0"
camino = "1.0.5"
ed25519-dalek = "1.0.1"
futures-lite = "1.12.0"
rand = "0.7"
secrecy = "0.8.0"
smolscale = "0.3.11"
#ed25519-dalek-bip32 = "0.1.1"